[tool.poetry]
name = "async-mandrill-client"
version = "0.1.0"
description = ""
authors = ["Hossein Sokhandan <iamsokhandan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
cchardet = "^2.1.7"
aiodns = "^3.0.0"
pydantic = {extras = ["all"], version = "^1.9.0"}
six = "^1.16.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
